--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,13 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="16" />
 
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true"
+        android:xlargeScreens="true" />
+
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
     <uses-permission android:name="android.permission.VIBRATE" />
